tests/ui-nightly/transmute-dst-not-frombytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../../zerocopy-derive/tests/include.rs:48:5
   |
48 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::FromBytes`:
             ()
             AU16
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and 51 others
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
  --> tests/ui-nightly/transmute-dst-not-frombytes.rs:19:41
   |
19 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^
   |                                         |
   |                                         required by a bound in this function
   |                                         required by this bound in `transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
